--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./script/styles.css" />
 </head>
 
-<body>
+<body class="bgimg">
     <h1 class="green"> เข้าสู่ระบบ </h1>
     <ul>
         <li><a href="index.html">หน้าหลัก </a> </li>
